@@ -12,6 +12,9 @@ What's New in Python 2.5 alpha 1?
 Core and builtins
 -----------------
 
+- Disallow keyword arguments for type constructors that don't use it
+  (fixes bug #1119418).
+
 - Forward UnicodeDecodeError into SyntaxError for source encoding errors.
 
 - SF bug #900092: When tracing (e.g. for hotshot), restore 'return' events for
